--- a/app/src/main/res/layout/fragment_price_list.xml
+++ b/app/src/main/res/layout/fragment_price_list.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".view.main.PriceListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="2"
+        android:textSize="50sp"
+        android:layout_width="wrap_content"
+        android:padding="20dp"
+        android:layout_height="wrap_content"/>
+
 
 </FrameLayout>
