--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.main.CoinListFragment">
+    <TextView
+        android:text="1"
+        android:textSize="50sp"
+        android:layout_width="wrap_content"
+        android:padding="100dp"
+        android:layout_height="wrap_content"/>
 
 
 </FrameLayout>
