--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.main.CoinListFragment">
-    <TextView
-        android:text="1"
-        android:textSize="50sp"
-        android:layout_width="wrap_content"
-        android:padding="100dp"
-        android:layout_height="wrap_content"/>
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="내가 관심있는 코인"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 
-</FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        
+    </ScrollView>
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
