--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.main.CoinListFragment">
     
     <ScrollView
@@ -14,21 +15,44 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/textview"
                 android:text="내가 관심있는 코인"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/selectedCoinRV"
+                android:layout_width="match_parent"
+                android:layout_height="330dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview"/>
 
+            <TextView
+                android:id="@+id/textview2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="다른 코인도 둘러볼까"
+                android:layout_margin="20dp"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selectedCoinRV"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/unselectedCoinRV"
+                android:layout_width="match_parent"
+                android:layout_height="330dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview2"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        
     </ScrollView>
-
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
