--- a/app/src/main/res/layout/fragment_price_list.xml
+++ b/app/src/main/res/layout/fragment_price_list.xml
@@ -1,16 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.main.PriceListFragment">
 
-    <TextView
-        android:text="2"
-        android:textSize="50sp"
-        android:layout_width="wrap_content"
-        android:padding="20dp"
-        android:layout_height="wrap_content"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:text="15분전"
+                android:layout_margin="20dp"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/price15m"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"/>
+
+            <TextView
+                android:text="30분전"
+                android:layout_margin="20dp"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/price30m"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"/>
+
+            <TextView
+                android:text="45분전"
+                android:layout_margin="20dp"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/price45m"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
-</FrameLayout>
+
+
+</LinearLayout>
